--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
       
 
         <div class="top-container">
-          <div class="row">
-            <div class="col-lg-12">
+          <!---<div class="row">
+            <div class="col-lg-12">---->
               <img class="top-cloud" src="images/cloud1.png" alt="cloud-img">
               <h1 class="title">Welcome</h1>
               <img class="sun" src="images/sun.png" alt="cloud-img" height="100mp" width="200mp">
               <img class="bottom-cloud" src="images/cloud1.png" alt="cloud-img">
               <!-- <img src="images/whitebackgroundremoved1.png" alt="mountain-img" height="400mp" width="600mp"> -->
               <img class="girl-img" src="images/girl.png" alt="girl-img">
-            </div>
-          </div>
+         <!---   </div>
+          </div>---->
         </div>
         
       </section>
