--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                   <img class="experience-image-ktzhgr" src="images/certificates/ktzhgr.png" alt="ktzhgr-img">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
-                  <h3 class="experience-text-ktzh">It was 9 years of incredible experience from a specialist to a manager in the largest national company in the country. 
+                  <h3 class="experience-text-ktzh">It was 9 years of incredible experience from a specialist to a manager in the largest national company of the country. 
                     I supported and developed business processes on SAP system modules MM, SD and 
                     analytical system BW in the railways industry.
                   </h3>
